--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <img src="/images/logo_long.png" alt="Logo de Mon petit graphisme">
+        <img src="/images/logo_long.png" alt="Logo de mon petit graphisme">
         <nav>
             <ul>
                 <li><a href="#">Accueil</a></li>
@@ -22,7 +22,38 @@
             </ul>
         </nav>
     </header>
-
+    <main>
+        <section class="section-1">
+            <img src="/images/logo_long.png" width="230px" alt="Logo de mon petit graphisme">
+            <h1>Agence de graphisme</h1>
+        </section>
+        <section class="section-2">
+            <p class="description">Mon petit graphisme est une agence de graphisme qui aide les entreprises à créer des
+                visuels attractifs.
+            </p>
+            <div class="bullet-points">
+                <article><img src="/images/graphic-design.png" alt="">
+                    <h2>Graphisme</h2>
+                    <p>Que vous ayez besoin de graphisme pour un site web, de cartes de visite ou des affiches, nous
+                        réalisons des visuels dont vous serez fiers.</p>
+                </article>
+                <article><img src="/images/strategie.png" alt="">
+                    <h2>Stratégie</h2>
+                    <p>Plutôt que de suggérer des graphismes à la mode, nous prenons le temps de comprendre vos
+                        objectifs et nous nous adaptons à vos besoins.</p>
+                </article>
+                <article><img src="/images/illustrations.png" alt="">
+                    <h2>Illustrations</h2>
+                    <p>Nos graphistes vous proposeront des illustrations 100% originales.</p>
+                </article>
+            </div>
+            <figure>
+                <blockquote>Mon petit graphisme est une excellente agence de graphisme. Les graphistes sont à l'écoute
+                    des besoins et m'ont permis de renouveler complètement la carte de mon restaurant.</blockquote>
+                <figcaption>Amandine, restauratrice</figcaption>
+            </figure>
+        </section>
+    </main>
 </body>
 
 </html>
