--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/44409f3fe0.js" crossorigin="anonymous"></script>
     <title>Mon petit graphisme</title>
 </head>
 
@@ -57,6 +58,37 @@
             </figure>
         </section>
     </main>
+    <footer>
+        <div class="copyright">Mon petit graphisme - Agence de graphisme basée à Paris</div>
+        <div class="social">
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+        <section class="contact">
+            <article>
+                <h3>Accès rapides</h3>
+                <ul>
+                    <li><a href="#">Accueil</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </article>
+            <article>
+                <h3>A propos</h3>
+                <ul>
+                    <li><a href="#">Données personnelles</a></li>
+                    <li><a href="#">Mentions légales</a></li>
+                    <li><a href="#">Cookies</a></li>
+                </ul>
+            </article>
+            <article class="footer-text">
+                <h3>Coordonnées</h3>
+                <p class="address">10 Quai de la Charente<br>
+                    75019 Paris<br>
+                    01 23 45 67 89</p>
+            </article>
+        </section>
+    </footer>
 </body>
 
 </html>
